--- a/管道、环境变量与常用命令/常用命令.md
+++ b/管道、环境变量与常用命令/常用命令.md
@@ -27,6 +27,14 @@ Linux命令非常多，本节讲解几个常用命令。其他命令依赖于大
     - `chmod -x xxx`：去掉`xxx`的可执行权限
     - `chmod 777 xxx`：将`xxx`的权限改成777
     - `chmod 777 xxx -R`：递归修改整个文件夹的权限
+> ​​ls -l命令​​
+​​功能​​：以长格式列出文件或目录的详细信息，包括权限、所有者、大小等。
+​​权限格式​​：共 10 个字符。
+第1个：表示文件类型（-为普通文件，d为目录）
+后9个字符分为三组：
+所有者：r（读：read）、w（写:write）、x（执行:excute）权限
+所属组：r（读：read）、w（写:write）、x（执行:excute）权限
+其他用户：r（读：read）、w（写:write）、x（执行:excute）权限
 
 ***
 
