--- a/6. 管道、环境变量与常用命令/常用命令.md
+++ b/6. 管道、环境变量与常用命令/常用命令.md
@@ -104,6 +104,8 @@ Linux命令非常多，本节讲解几个常用命令。其他命令依赖于大
     - `tar -zcvf xxx.tar.gz /path/to/file/*`：压缩
     - `tar -zxvf xxx.tar.gz`：解压缩
 6. `diff xxx yyy`：查找文件`xxx`与`yyy`的不同点
+7. `tar -zxvf xxx.tar.gz -C yyy`：可以将 `xxx.tar.gz` 解压到指定目录 `yyy` 中，x - extract。
+    - -C代表change目录的意思，表示解压到后面指定的目录
 
 ***
 
