--- a/6. 管道、环境变量与常用命令/常用命令.md
+++ b/6. 管道、环境变量与常用命令/常用命令.md
@@ -114,3 +114,9 @@ Linux命令非常多，本节讲解几个常用命令。其他命令依赖于大
 1. `sudo command`：以`root`身份执行`command`命令
 2. `apt-get install xxx`：安装软件 
 3. `pip install xxx --user --upgrade`：安装python包
+
+#### c++编译
+1. 编译：`g++ -c xx.cpp xx.cpp`
+2. 连接: `g++ *.o -o name`
+ - `name`自己任意取
+执行直接:`./name` 
